Added forward button on photocard

--- a/design/scss/application.scss
+++ b/design/scss/application.scss
@@ -16,4 +16,5 @@
 @include pictos-iconmask('photo1');
 @include pictos-iconmask('photos2');
 @include pictos-iconmask('cloud_black_upload2');
+@include pictos-iconmask('trash2');
 @include pictos-iconmask('delete');
